poke/testsuite/poke.pkl/map-ios-diag-2.pk
/* { dg-do compile } */

int @ 2#B : 2#B;  /* { dg-error "expected integer" } */
